--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,8 @@ body,
 :root {
   @apply h-full;
   @apply box-border;
+  @apply text-base;
+  @apply scroll-smooth;
 }
 
 @layer base {
@@ -36,6 +38,9 @@ body,
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
+    --dark-text: 222.2 47.4% 11.2%;
+    --dark-content: 222.2 27.31% 85.82%;
+    --dark-content-foreground: 222.2 66.7% 95.05%;
   }
 
   .dark {
@@ -63,6 +68,9 @@ body,
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
+    --dark-text: 211.03 18.95% 70%;
+    --dark-content: 214.29 13.73% 20%;
+    --dark-content-foreground: 216 13.89% 14.12%;
   }
 }
 
